# faixa_etaria

./: .gitignore  README.md  etaria.csv  etaria_web.py  modelo_knn.pkl  pyproject.toml  requirements.txt  train_faixa_etaria.py
