[tool.poetry]
name = "poetry add pandas sklearn streamlit"
version = "0.1.0"
description = ""
authors = ["travenupai <ai.travenup@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pandas = "^2.2.3"
sklearn = "^0.0.post12"
streamlit = "^1.39.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
